<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.TraderNameActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/traderNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/traderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/traderName"
                android:fontFamily="@font/simonetta_regular"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/cropName"
                    android:fontFamily="@font/simonetta_regular"/>
                <TextView
                    android:id="@+id/cropName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/cropNameItem"
                    android:fontFamily="@font/simonetta_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/variety"
                    android:fontFamily="@font/simonetta_regular"/>
                <TextView
                    android:id="@+id/variety"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/varietyItem"
                    android:fontFamily="@font/simonetta_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/totalQuantity"
                    android:fontFamily="@font/simonetta_regular"/>
                <TextView
                    android:id="@+id/totalQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/totalQuantityItem"
                    android:fontFamily="@font/simonetta_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/rate"
                    android:fontFamily="@font/simonetta_regular"/>

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/rateItem"
                    android:fontFamily="@font/simonetta_regular"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/expectedDate"
                    android:fontFamily="@font/simonetta_regular"/>
                <TextView
                    android:id="@+id/expectedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/expectedDateItem"
                    android:fontFamily="@font/simonetta_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/imageGallery"
                    android:fontFamily="@font/simonetta_regular"/>
                <ImageView
                    android:id="@+id/galleryImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_gallery" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/traceability"
                    android:fontFamily="@font/simonetta_regular"/>
                <ImageView
                    android:id="@+id/traceability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/traceability" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/interested"
                    android:fontFamily="@font/simonetta_regular"/>
                <Switch
                    android:id="@+id/interested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NO  "
                    android:textOff="NO"
                    android:textOn="YES"
                    android:fontFamily="@font/simonetta_regular"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="YES"
                    android:fontFamily="@font/simonetta_regular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/demandQuantity"
                    android:fontFamily="@font/simonetta_regular"/>

                <EditText
                    android:id="@+id/quantityDemand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:ems="6"
                    android:maxLength="5"
                    android:inputType="textPersonName"
                    android:hint="@string/enterQuantity"
                    android:fontFamily="@font/simonetta_regular"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/demandDate"
                    android:fontFamily="@font/simonetta_regular"
                    />
                <EditText
                    android:id="@+id/date_demand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textSize="15sp"
                    android:ems="6"
                    android:maxLength="10"
                    android:hint="mm/dd/yyyy"
                    android:fontFamily="@font/simonetta_regular"/>

            </LinearLayout>

            <Button
                android:id="@+id/submitTradeNameButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/submit"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/simonetta_black"
                android:background="@drawable/button_round_shape"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/traderNameRecycleView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:nestedScrollingEnabled="false"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="5dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:background="@color/white"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>